--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,94 @@
-/* Initial view / home screen styles */
+/* Mobile/Small Devices - General Styles */
+
+* {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+body {
+    margin: 0;
+    background-color: lightgray; /*Temporary*/
+    height: 100vh;
+}
+
+#root {
+    height: 100%;
+}
+
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3em;
+    text-align: center;
+    
+}
+
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+}
+
+p {
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.App {
+    height: 100%;
+    border: 3px blue dashed;
+}
+
+/* Outer div for each Screen component */
+.screen-container {
+    border: solid;
+    height: 100%;
+}
+
+
+/* Nav-Buttons */
+
+.nav-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav-buttons button {
+    min-height: 3em;
+    min-width: 8em;
+    max-height: 5em;
+    max-width: 10em;
+    margin: 1em 1em 1em 1em;
+}
+
+/* HomeScreen */
+
+/* HelpScreen */
+
+#help-nav-buttons{
+    flex-direction: row-reverse;
+    justify-content: center;
+}
+
+/* QuizScreen */
+
+.answer-container {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 80%;
+}
+
+.answer-container button {
+    min-height: 5em;
+    min-width: 12em;
+    max-height: 10em;
+    max-width: 15em;
+    margin: 1em 1em 1em 1em;
+}
+
+/* ResultScreen */
+
+/* Larger Device Styles */
+@media (min-width: 769px) { }
