--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ h2 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5em;
     text-align: center;
+    margin: 0;
 }
 
 p {
@@ -76,8 +77,8 @@ button:disabled:hover {
 
 .home-button {
     position: absolute;
-    top: 1em;
-    left: 1em;
+    top: 0.6em;
+    left: 0.6em;
     height: 3em;
     width: 3em;
     background-image: url(./images/home-button-background.png);
@@ -98,6 +99,12 @@ button:disabled:hover {
 }
 
 /* HomeScreen */
+.homescreen-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 /* HelpScreen */
 
@@ -107,6 +114,21 @@ button:disabled:hover {
 }
 
 /* QuizScreen */
+.quizscreen-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.quiz-elements {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
 
 .answer-container {
     display: flex;
@@ -114,6 +136,7 @@ button:disabled:hover {
     justify-content: center;
     flex-wrap: wrap;
     max-width: 80%;
+    padding-top: 5em;
 }
 
 .answer-container button {
@@ -122,6 +145,12 @@ button:disabled:hover {
     max-height: 10em;
     max-width: 15em;
     margin: 1em 1em 1em 1em;
+}
+
+
+/* Reserves space for next-button to avoid content shifting*/
+.quizscreen-container .nav-buttons {
+    height: 3em;
 }
 
 /* ResultScreen */
