Modify answer-container and answer-container button margins to better suit windows with a smaller width

--- a/src/styles.css
+++ b/src/styles.css
@@ -296,12 +296,16 @@ button {
 /* QuizScreen */
 
 .quizscreen-container{
-    width: 80%;
+    width: 90%;
 }
 
 .answer-container {
     width: 100%;
     max-width: 50em;
+}
+
+.answer-container button {
+    margin: 0.5em;
 }
 
 /* Reserves space for next-button to avoid content shifting*/
