--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,9 @@
 }
 
 /* Mobile/Small Devices - General Styles */
+:root {
+    --text-container-color: #ffffffaa
+}
 
 * {
   box-sizing: border-box;
@@ -176,12 +179,17 @@ button:disabled:hover {
     max-width: 100%;
     padding: 0 0.7em;
     border-radius: 1em;
-    background-color: #ffffffaa;
+    background-color: var(--text-container-color);
+}
+
+.help-elements h2 {
+    margin-bottom: 1em;
 }
 
 #help-nav-buttons{
     flex-direction: row-reverse;
     justify-content: center;
+    margin-top: 3em;
 }
 
 /* QuizScreen */
@@ -207,7 +215,7 @@ button:disabled:hover {
     max-width: 80%;
     padding: 0 0.7em;
     border-radius: 1em;
-    background-color: #ffffffaa;
+    background-color: var(--text-container-color);
 }
 
 .current-question {
@@ -218,7 +226,7 @@ button:disabled:hover {
 
 .answer-container {
     display: flex;
-    margin: 4em auto 0;
+    margin: 1em auto 0;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 40em;
@@ -264,7 +272,7 @@ button:disabled:hover {
     max-width: 100%;
     padding: 0 0.7em;
     border-radius: 1em;
-    background-color: #ffffffaa;
+    background-color: var(--text-container-color);
 }
 
 .result-elements {
@@ -319,8 +327,13 @@ button {
     width: 90%;
 }
 
+.current-question-background {
+    max-width: 60%;
+}
+
 .answer-container {
     width: 100%;
+    margin: 3em auto 0;
     max-width: 50em;
 }
 
