--- a/src/styles.css
+++ b/src/styles.css
@@ -267,11 +267,17 @@ button:disabled:hover {
 }
 
 .result-paragraph-background {
-  max-width: 100%;
+  max-width: 90%;
   padding: 0 0.7em;
   border-radius: 1em;
   background-color: var(--text-container-color);
   box-shadow: 9px 6px 10px #000000aa;
+}
+
+.result-text-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .result-elements {
