Add cursor style change on button hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,7 @@ button {
 
 button:hover {
   color: rgb(255, 163, 97);
+  cursor: pointer;
 }
 
 /* Fades the button out slightly when disabled */
