--- a/src/styles.css
+++ b/src/styles.css
@@ -250,16 +250,19 @@ button:disabled:hover {
 /*Progress tracker for QuizScreen*/
 
 .progress-tracker-container {
-  width: 75%;
+  width: 50vw;
+  min-width: 5em;
+  height: 2.5em;
+  margin-top: 1em;
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
-  border: 1px black solid;
 }
 
 .progress-bar-border {
-  border: 3px red solid;
-  height: 2.5em;
+  border: 2px black solid;
+  height: 100%;
   width: 100%;
   border-radius: 1em;
 }
@@ -267,15 +270,27 @@ button:disabled:hover {
 .progress-bar-background {
   width: 100%;
   height: 100%;
-  background-color: gray;
+  background-color: #80808077;
   border-radius: 1em;
+  overflow: hidden;
 }
 
 .progress-bar-foreground {
   width: 0%;
   height: 100%;
-  background-color: green;
+  background-color: #556b2fcc;
   border-radius: 1em;
+}
+
+.progress-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  text-align: center;
+  font-size: 1em;
+  color: #f5f5f5;
 }
 
 /* ResultScreen */
@@ -390,5 +405,15 @@ button:disabled:hover {
   .quizscreen-container .nav-buttons {
     min-height: 5em;
     height: fit-content;
+  }
+
+  /*Progress tracker for QuizScreen*/
+
+  .progress-tracker-container {
+    max-width: 40em;
+  }
+
+  .progress-text {
+    font-size: 1.4em;
   }
 }
