--- a/src/styles.css
+++ b/src/styles.css
@@ -279,6 +279,7 @@ button:disabled:hover {
   width: 0%;
   height: 100%;
   background-color: #556b2fcc;
+  transition: width 1s;
   border-radius: 1em;
 }
 
